apps/corpora/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: corpora
  namespace: corpora
spec:
  selector:
    app: corpora
  type: ClusterIP
  ports:
  - port: 80
