apps/corpora/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corpora
  namespace: corpora
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /corpora(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: corpora
            port:
              number: 80
